# tmee

./: CMakeLists.txt  Makefile  README.md  TODO.txt  cfg_parse.c  cfg_parse.h  main.c  make_modules.sh  mem_file.c  mem_file.h  module_interface.h  tmee  tmee.code-workspace  types.h
config/: GOOSE.ini  SI.ini  goose_subscriber.ini  ipc.ini  main_config.ini  mms_server.ini  smv92.ini  smv_publisher.ini
module_src/goose_publisher/: CMakeLists.txt  README.md  config.ini  publisher_mmap.c
module_src/goose_subscriber/: CMakeLists.txt  README.md  cfg_parse.h  goose_subscriber.c  mem_file.c
module_src/ipc_signals/: CMakeLists.txt  README.md  ipc.c
module_src/mms_server/: CMakeLists.txt  main.c
module_src/module_template/: CMakeLists.txt  compile.sh  main.c
module_src/si/: CMakeLists.txt  README.md  mem_file.h  si.c
module_src/smv_publisher/: CMakeLists.txt  README.md  smv_publisher.c
module_src/smv_subscriber/: CMakeLists.txt  README.md  cfg_parse.c  subscriber_mmap.c
modules/: libGOOSE.so.0.9.0  libSI.so.0.9.0  libgoose_subscriber.so.0.9.0  libsmv92.so.0.9.0
other/mem_file/: analysis.txt  gmon.out  stdio2.h.gcov  test  test.c  test.c.gcov  test.gcda  test.gcno
other/python_example/: README.md  mem_file.py  program.py
tools/python_client/: libiec61850client.py
